Revision history for {{$dist->name}}

{{$NEXT}}

0.04      2013-12-13 16:39:45 -0500
  - First CPAN release

0.03      2013-12-13 14:36:20 -0500
  - MSYS now downloaded and installed if not found

0.02      2013-12-08 16:08:37 -0500
  - documentation
  - msys_run does an exit(non-zero) on child failure

0.01      2013-12-07 13:37:22 -0500
  - initial version